service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cypherflow-dummy
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: cypherflow-dummy
