ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flow
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # certmanager.k8s.io/cluster-issuer: "letsencrypt"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - test.cyphercrypttech.com
    secretName: test-cyphercrypttech-com
  rules:
  - host: test.cyphercrypttech.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
